--- a/minigeodash.html
+++ b/minigeodash.html
@@ -1,149 +1,140 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mini Geometry Dash</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Geometry Dash Mini — Čierne Trojuholníky</title>
 <style>
-  body {
-    margin: 0;
-    background: #222;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
-    color: white;
-  }
-  canvas {
-    background: #333;
-    display: block;
-  }
+html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial;color:#fff}
+.wrap{height:100%;display:flex;align-items:center;justify-content:center;}
+canvas{border-radius:8px;box-shadow:0 10px 30px rgba(0,0,0,0.6)}
+.overlay{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;pointer-events:none}
+.panel{width:820px;max-width:95%;background:rgba(11,18,32,0.94);padding:18px;border-radius:12px;box-shadow:0 8px 40px rgba(0,0,0,0.6);pointer-events:auto;text-align:center}
+.title{font-size:26px;margin:0 0 12px}
+.bigBtn{display:inline-block;background:#ffd166;color:#111;padding:12px 24px;border-radius:10px;border:none;font-weight:700;cursor:pointer}
+.muted{background:#334;color:#cfd8ff}
+.row{display:flex;gap:12px;align-items:center;justify-content:center;margin-top:12px}
+.skins{display:flex;gap:10px}
+.skin{width:48px;height:48px;border-radius:6px;border:2px solid rgba(255,255,255,0.06);display:flex;align-items:center;justify-content:center;cursor:pointer}
+.skin.selected{outline:3px solid rgba(255,209,102,0.18);box-shadow:0 6px 20px rgba(255,209,102,0.06)}
+.levels{display:flex;gap:8px}
+.levelBtn{padding:8px 12px;border-radius:8px;border:none;background:#2b3350;color:#fff;cursor:pointer}
+.levelBtn.selected{outline:3px solid rgba(255,209,102,0.12)}
+.hud{position:fixed;left:20px;top:20px;background:rgba(0,0,0,0.25);padding:8px 12px;border-radius:8px;font-weight:700;display:flex;flex-direction:column;gap:4px}
+.percent{font-size:16px}
+.levelCompletePanel{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,0.85);flex-direction:column;font-size:24px;font-weight:700;color:#ffd166;opacity:0;pointer-events:none;transition:opacity 0.5s}
+.levelCompletePanel.show{opacity:1;pointer-events:auto}
+.levelCompletePanel button{margin-top:12px}
 </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="600" height="300"></canvas>
+<div class="wrap">
+  <canvas id="gameCanvas" width="900" height="480"></canvas>
+</div>
+<div class="overlay">
+  <div id="startScreen" class="panel">
+    <div class="title">Geometry Dash Mini</div>
+    <button id="showSelectBtn" class="bigBtn">Štart</button>
+  </div>
+  <div id="selectScreen" class="panel" style="display:none">
+    <div class="title">Vyber level a skin</div>
+    <div style="margin-bottom:10px">Vyber farbu kocky:</div>
+    <div class="row">
+      <div class="skins" id="skins"></div>
+    </div>
+    <div style="margin-top:12px">Vyber level:</div>
+    <div class="row">
+      <div class="levels">
+        <button class="levelBtn selected" data-level="1">Level 1</button>
+        <button class="levelBtn" data-level="2">Level 2</button>
+        <button class="levelBtn" data-level="3">Level 3</button>
+      </div>
+    </div>
+    <div style="margin-top:14px">
+      <button id="playBtn" class="bigBtn">Hrať</button>
+      <button id="backBtn" class="bigBtn muted" style="margin-left:8px">Späť</button>
+    </div>
+  </div>
+</div>
+<div class="hud" id="hud">
+  <div id="scoreText">Skóre: 0 · Level: 1</div>
+  <div id="percentText" class="percent">0%</div>
+</div>
+<div class="levelCompletePanel" id="levelCompletePanel">
+  <div>Level Complete!</div>
+  <div class="row">
+    <button id="restartBtn" class="bigBtn">Skúsiť znova</button>
+    <button id="menuBtn" class="bigBtn muted">Menu</button>
+  </div>
+</div>
 <script>
-const canvas = document.getElementById('gameCanvas');
-const ctx = canvas.getContext('2d');
+const LEVELS={1:{speed:8,spawnInterval:80,target:10,bg:'#0f1626'},2:{speed:10,spawnInterval:60,target:20,bg:'#1b2e4f'},3:{speed:12,spawnInterval:45,target:35,bg:'#2c1f4d'}};
+const OBSTACLE_HEIGHT=40,PLAYER_SIZE=48;
+const canvas=document.getElementById('gameCanvas'),ctx=canvas.getContext('2d');
+let W=canvas.width,H=canvas.height;
+let player={x:120,y:H-OBSTACLE_HEIGHT-PLAYER_SIZE,size:PLAYER_SIZE,dy:0,gravity:0.9,jumpForce:-15,canJump:false};
+let obstacles=[],frame=0,score=0,running=false,currentLevel=1,currentConfig=LEVELS[currentLevel];
+let jumpPressed=false;
+let selectedSkin={id:'cyan',color:'#33d1ff'};
+const startScreen=document.getElementById('startScreen');
+const selectScreen=document.getElementById('selectScreen');
+const showSelectBtn=document.getElementById('showSelectBtn');
+const playBtn=document.getElementById('playBtn');
+const backBtn=document.getElementById('backBtn');
+const skinsContainer=document.getElementById('skins');
+const hud=document.getElementById('hud');
+const scoreText=document.getElementById('scoreText');
+const percentText=document.getElementById('percentText');
+const levelCompletePanel=document.getElementById('levelCompletePanel');
+const restartBtn=document.getElementById('restartBtn');
+const menuBtn=document.getElementById('menuBtn');
+const SKINS=[{id:'cyan',color:'#33d1ff'},{id:'orange',color:'#ff9f43'},{id:'green',color:'#4cd137'},{id:'pink',color:'#ff6b81'}];
 
-const game = {
-    gravity: 0.6,
-    speed: 4,
-    score: 0,
-    gameOver: false
-};
+function buildSkins(){SKINS.forEach(s=>{const d=document.createElement('div');d.className='skin';d.style.backgroundColor=s.color;d.addEventListener('click',()=>{document.querySelectorAll('.skin').forEach(x=>x.classList.remove('selected'));d.classList.add('selected');selectedSkin=s;});skinsContainer.appendChild(d);});skinsContainer.firstChild.classList.add('selected');}
+selectScreen.querySelectorAll('.levelBtn').forEach(b=>{b.addEventListener('click',()=>{selectScreen.querySelectorAll('.levelBtn').forEach(x=>x.classList.remove('selected'));b.classList.add('selected');currentLevel=Number(b.dataset.level);currentConfig=LEVELS[currentLevel];});});
+showSelectBtn.addEventListener('click',()=>{startScreen.style.display='none';selectScreen.style.display='block';});
+backBtn.addEventListener('click',()=>{selectScreen.style.display='none';startScreen.style.display='block';});
+playBtn.addEventListener('click',()=>{selectScreen.style.display='none';startGame(currentLevel);});
+document.addEventListener('keydown',e=>{if(e.code==='Space')jumpPressed=true;});
+document.addEventListener('keyup',e=>{if(e.code==='Space')jumpPressed=false;});
+document.addEventListener('mousedown',()=>jumpPressed=true);
+document.addEventListener('mouseup',()=>jumpPressed=false);
+restartBtn.addEventListener('click',()=>{levelCompletePanel.classList.remove('show');startGame(currentLevel);});
+menuBtn.addEventListener('click',()=>{levelCompletePanel.classList.remove('show');selectScreen.style.display='block';});
 
-const player = {
-    x: 50,
-    y: 200,
-    width: 30,
-    height: 30,
-    dy: 0,
-    jumpForce: -12,
-    grounded: false
-};
-
-let obstacles = [];
-let spawnTimer = 0;
-
-function drawPlayer() {
-    ctx.fillStyle = "#0f0";
-    ctx.fillRect(player.x, player.y, player.width, player.height);
-}
-
-function drawObstacles() {
-    ctx.fillStyle = "#f00";
-    obstacles.forEach(obs => {
-        ctx.fillRect(obs.x, obs.y, obs.width, obs.height);
-    });
-}
-
-function updatePlayer() {
-    player.dy += game.gravity;
-    player.y += player.dy;
-
-    if (player.y + player.height >= canvas.height) {
-        player.y = canvas.height - player.height;
-        player.dy = 0;
-        player.grounded = true;
-    } else {
-        player.grounded = false;
-    }
-}
-
-function spawnObstacle() {
-    const height = Math.random() * 50 + 20;
-    obstacles.push({
-        x: canvas.width,
-        y: canvas.height - height,
-        width: 20,
-        height: height
-    });
-}
-
-function updateObstacles() {
-    obstacles.forEach((obs, index) => {
-        obs.x -= game.speed;
-
-        // Collision detection
-        if (
-            player.x < obs.x + obs.width &&
-            player.x + player.width > obs.x &&
-            player.y < obs.y + obs.height &&
-            player.y + player.height > obs.y
-        ) {
-            game.gameOver = true;
-        }
-
-        // Remove off-screen obstacles
-        if (obs.x + obs.width < 0) {
-            obstacles.splice(index, 1);
-            game.score++;
-        }
-    });
-}
-
-function drawScore() {
-    ctx.fillStyle = "#fff";
-    ctx.font = "20px Arial";
-    ctx.fillText("Score: " + game.score, 10, 25);
-}
-
-function gameLoop() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-    if (!game.gameOver) {
-        updatePlayer();
-        updateObstacles();
-
-        drawPlayer();
-        drawObstacles();
-        drawScore();
-
-        spawnTimer++;
-        if (spawnTimer > 90) { // spawn obstacle every ~1.5 seconds
-            spawnObstacle();
-            spawnTimer = 0;
-        }
-
-        requestAnimationFrame(gameLoop);
-    } else {
-        ctx.fillStyle = "#fff";
-        ctx.font = "30px Arial";
-        ctx.fillText("Game Over! Score: " + game.score, 100, canvas.height / 2);
-    }
-}
-
-document.addEventListener('keydown', (e) => {
-    if ((e.code === 'Space' || e.code === 'ArrowUp') && player.grounded) {
-        player.dy = player.jumpForce;
-    }
+function startGame(level){currentLevel=level;currentConfig=LEVELS[level];obstacles=[];frame=0;score=0;updateHUD();player.y=H-OBSTACLE_HEIGHT-player.size;player.dy=0;player.canJump=false;levelCompletePanel.classList.remove('show');running=true;loop();}
+function playerJump(){player.dy=player.jumpForce;player.canJump=false;}
+function spawnObstacle(){const w=Math.floor(Math.random()*40)+30;const x=W+60;const y=H-OBSTACLE_HEIGHT;obstacles.push({x,y,w,h:OBSTACLE_HEIGHT,passed:false,type:'spike'});}
+function loop(){if(!running)return;frame++;if(jumpPressed && player.canJump){playerJump();}player.dy+=player.gravity;player.y+=player.dy;
+if(player.y+player.size>H){player.y=H-player.size;player.dy=0;player.canJump=true;}
+if(frame%Math.max(20,Math.floor(currentConfig.spawnInterval))===0){spawnObstacle();}
+for(let i=obstacles.length-1;i>=0;i--){const ob=obstacles[i];ob.x-=currentConfig.speed;if(!ob.passed&&(ob.x+ob.w)<(player.x-player.size/2)){ob.passed=true;score++;updateHUD();}if(rectsOverlap({x:player.x-player.size/2,y:player.y,w:player.size,h:player.size},{x:ob.x,y:ob.y,w:ob.w,h:ob.h})){running=false;startGame(currentLevel);return;}if(ob.x+ob.w<-100)obstacles.splice(i,1);}
+updateHUD();render();requestAnimationFrame(loop);}
+function rectsOverlap(a,b){return(a.x<b.x+b.w&&a.x+a.w>b.x&&a.y<b.y+b.h&&a.y+a.h>b.y);}
+function render(){ctx.clearRect(0,0,W,H);ctx.fillStyle=currentConfig.bg;ctx.fillRect(0,0,W,H);
+ctx.fillStyle='linear-gradient(180deg, #2b3350, #1b1f3b)';ctx.fillRect(0,H-OBSTACLE_HEIGHT,W,OBSTACLE_HEIGHT);
+obstacles.forEach(ob=>{
+  const cx=ob.x+ob.w/2;
+  ctx.beginPath();
+  ctx.moveTo(cx,ob.y);
+  ctx.lineTo(ob.x,ob.y+ob.h);
+  ctx.lineTo(ob.x+ob.w,ob.y+ob.h);
+  ctx.closePath();
+  ctx.fillStyle='#000';
+  ctx.fill();
+  ctx.strokeStyle='red';
+  ctx.lineWidth=2;
+  ctx.stroke();
 });
-
-gameLoop();
+const playerGrd=ctx.createLinearGradient(player.x,player.y,player.x+player.size,player.y+player.size);
+playerGrd.addColorStop(0,selectedSkin.color);
+playerGrd.addColorStop(1,'#222');
+ctx.fillStyle=playerGrd;
+ctx.fillRect(player.x-player.size/2,player.y,player.size,player.size);}
+function updateHUD(){scoreText.textContent=`Skóre: ${score} · Level: ${currentLevel}`;percentText.textContent=Math.min(Math.floor(score/currentConfig.target*100),100)+'%';}
+function resizeCanvas(){const maxW=Math.min(window.innerWidth-40,900);const scale=maxW/900;canvas.style.width=(900*scale)+'px';canvas.style.height=(480*scale)+'px';W=canvas.width;H=canvas.height;player.y=Math.min(player.y,H-OBSTACLE_HEIGHT-player.size);}
+window.addEventListener('resize',resizeCanvas);
+buildSkins();resizeCanvas();updateHUD();
 </script>
 </body>
 </html>
-
