--- a/menu.html
+++ b/menu.html
@@ -78,7 +78,7 @@
   <div class="card">
     <h1>📂 Nástroje Menu</h1>
     <div class="button-list">
-      <a href="mini-geometry-dash.html">🗂️ ErikAI zoznam APK WEB 1</a>
+      <a href="minigeodash.html">🗂️ ErikAI zoznam APK WEB 1</a>
       <a href="nastroje.html">👀 ErikAI Pomocné Nástroje 2</a>
       <a href="generator_hesla_mena.html">👤 ErikAI generator náhodnosti 3</a>
       <a href="erikukazka.html">👀 ErikAI ukážka 4</a>
